<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAdActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="215dp"
        android:layout_height="192dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/add_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_photo"
        tools:srcCompat="@drawable/add_photo" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="128dp"
        android:layout_height="96dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButtonBoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boy" />

        <RadioButton
            android:id="@+id/radioButtonGirl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/girl" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/buttonApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>